# unitree_sdk_jt

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.cursor/commands/: ship.md
.cursor/rules/: 00-workflow.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: c-cpp.yml
data/demo1/: f1.json  f2.json  floor1.pcd  floor2.pcd  view_map.py
doc/: BACKLOG.md  agent_pipeline_onboarding_for_teammate.md  dimos_pipeline_setup_for_agent.md  go2_slam_quick_start_via_keydemo_76f8e9c0.plan.md  pipeline_test_report_20260424.md  plan1-go2_edu_climb_stairs_via_keydemo_f3b8ebdb.plan.md  plan2-climb-los-waypoint-following_66ea0073.plan.md  plan3-keydemo3_explicit_save_and_d-reload_0b5e18fb.plan.md
doc/archive/: README.md  dimos_huazhijian_multi_agent_setup_guide_zh.md
doc/演示文档说明/: keyDemo3_operation_manual.html  keyDemo3_operation_manual.md  md_to_pdf.py
example/go2/: go2_robot_state_client.cpp
scripts/: verify.sh
unitree_slam/config/: clean_log.sh  cyclonedds.xml  dds_config.json
unitree_slam/config/gridmap_config/: config.yaml  demo.json  ele.rviz
unitree_slam/config/mid360/: user_config.yaml
unitree_slam/config/pl_mapping/: mid360.yaml  xt16.yaml
unitree_slam/config/pl_relocation/: mid360.yaml  xt16.yaml
unitree_slam/config/planner_config/: param.yaml  pose_ctrl_param.yaml
unitree_slam/config/recharge_config/: aruco_config.yaml  cylinder_config.yaml
unitree_slam/config/slam_interfaces_server_config/: cyclonedds.xml  dds_parameter.json  param.yaml
unitree_slam/config/xt16/: user_config.yaml
unitree_slam/example/: CMakeLists.txt  README.md
unitree_slam/example/include/: climb_control.hpp
unitree_slam/example/src/: keyDemo.cpp  keyDemo2.cpp  keyDemo3.cpp
unitree_slam/example/test/: CMakeLists.txt  test_climb_control.cpp
unitree_slam/rviz2/: mapping.rviz  relocation.rviz
